syntax = "proto3";
package featureprobe.link;
option java_package = "com.featureprobe.link";

message Packet {
  oneof packet {
    Ping ping = 1;
    Pong pong = 2;
    Message message = 3;
  }
}

message Ping { uint64 timestamp = 1; }

message Pong { uint64 timestamp = 1; }

message Message {
  string namespace = 1;
  string path = 2;
  map<string, string> metadata = 3;
  bytes body = 4;
  optional uint64 expire_at = 5;
}